--- a/main.html
+++ b/main.html
@@ -1,16 +1,48 @@
-<!DOCTYPE html>
-
 <html>
-
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+<form method="post">
+	<div>
+		<label for="name">Name*</label>
+		<input type="text" id="name" required>
+	</div>
+	<div>
+		<label for="email">Email*</label>
+		<input type="email" id="email" required>
+	</div>
+	<div>
+        <label>Gender</label>
+		<input type="radio" value="male" name="gender" required>
+		<input type="radio" value="female" name="gender" required>
+	</div>
+	<div>
+		<label for="laptop">Car Brands</label>
+		<select id="laptop">
+			<option>BMW</option>
+			<option>Audi</option>
+			<option>Mercedez</option></option>
+		</select>
+	</div>
+    <div>
+		<label for="age">Car Age*</label>
+		<input type="number" id="age" required>
+	</div>
+	
+	<div>
+		<label for="dob">Date of purchase*</label>
+		<input type="date" id="dob" required>
+	</div>
+	
+	<div>
+		<label for="password">Password*</label>
+		<input type="password" id="password" required>
+	</div>
+	
+	<button type="submit">submit</button>
+</form>
 </body>
 
 </html>
