--- a/main.html
+++ b/main.html
@@ -19,21 +19,21 @@
 		<input type="radio" value="female" name="gender" required>
 	</div>
 	<div>
-		<label for="laptop">Car Brands</label>
-		<select id="laptop">
+		<label for="cars">Car Brands</label>
+		<select id="cars">
 			<option>BMW</option>
 			<option>Audi</option>
 			<option>Mercedez</option></option>
 		</select>
 	</div>
     <div>
-		<label for="age">Car Age*</label>
-		<input type="number" id="age" required>
+		<label for="carage">Car Age*</label>
+		<input type="number" id="carage" required>
 	</div>
 	
 	<div>
-		<label for="dob">Date of purchase*</label>
-		<input type="date" id="dob" required>
+		<label for="dop">dop*</label>
+		<input type="date" id="dop" required>
 	</div>
 	
 	<div>
